--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/app.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
     <title>Proyecto 1</title>
   </head>
   <body>
-    <h1>Proyecto 1</h1>
-
+    <nav class="navbar navbar-dark bg-dark">
+      <span class="navbar-brand mb-0 h1 title">PassMeter</span>
+    </nav>
+    
+    <div class="container" id='contenedor'>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Bienvenido!</h1>
+          <p class="lead">Esta es una aplicación para medir que tan segura es una contraseña</p>
+          <hr class="my-4">
+          <p>La aplicación medirá de acuerdo a ciertos requerimientos que tan compleja es la contraseña y asignará un puntaje de acuerdo a si son buenas o malas prácticas, señalando el puntaje general y la complejidad de la misma. Esto se verá de manera dinámica a medida que el usuario cambie su contraseña como va afectando a su complejidad y puntaje.</p>
+          <a class="btn btn-primary btn-lg" href="./pages/medidor.html" role="button">Nueva Medición</a>
+        </div>
+      </div>
+    </div>
     <!-- JavaScript -->
     <script src="js/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
