--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -26,7 +26,7 @@
                         <input type="password" class="form-control" id="password" placeholder="Contraseña" oninput="update(event)">
                     </div>
                     <div class="pos">
-                        <input class="form-check-input" type="checkbox" value="" id="hidePass">
+                        <input class="form-check-input" type="checkbox" id="hidePass" checked='true' onclick="ocultarPass(event)">
                         <label class="form-check-label" for="hidePass">
                             Ocultar contraseña
                         </label>
