Añadido icono de estado + cambio cuando agrego una letra mayuscula

--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -7,6 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <title>Proyecto 1</title>
   </head>
@@ -84,49 +85,49 @@
             </thead>
             <tbody>
               <tr>
-                  <td></td>
+                  <td><i id='status1' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Número de caracteres</td>
                   <td>+(n*4)</td>
                   <td id='cant1'>0</td>
                   <td id='punt1'>0</td>
               </tr>
               <tr>
-                  <td></td>
+                  <td><i id='status2' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Letras Mayúsculas</td>
                   <td>+((long-n)*2)</td>
                   <td id='cant2'>0</td>
                   <td id='punt2'>0</td>
               </tr>
               <tr>
-                  <td></td>
+                  <td><i id='status3' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Letras Minúsculas</td>
                   <td>+((long-n)*2)</td>
                   <td id='cant3'>0</td>
                   <td id='punt3'>0</td>
               </tr>
               <tr>
-                  <td></td>
+                  <td><i id='status4' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Números</td>
                   <td>+(n*4)</td>
                   <td id='cant4'>0</td>
                   <td id='punt4'>0</td>
               </tr>
               <tr>
-                  <td></td>
+                  <td><i id='status5' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Simbolos</td>
                   <td>+(n*6)</td>
                   <td id='cant5'>0</td>
                   <td id='punt5'>0</td>
               </tr>
               <tr>
-                  <td></td>
+                  <td><i id='status6' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Números o Simbolos en medio</td>
                   <td>+(n*2)</td>
                   <td id='cant6'>0</td>
                   <td id='punt6'>0</td>
               </tr>
               <tr>
-                  <td></td>
+                  <td><i id='status7' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
                   <td>Requerimientos</td>
                   <td>+(n*2)</td>
                   <td id='cant7'>0</td>
