--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -16,125 +16,126 @@
       <span class="navbar-brand mb-0 h1 title">PassMeter</span>
     </nav>
     
-    <div class="container" id='contenedor'>
-        <div class="card border-danger space">
-            <div class="card-header bg-dark">
-                <h5 class="card-title text-light">Prueba tu Contraseña</h5>
-              </div>
-            <div class="card-body row">
-                <div class="col-sm">
-                    <div class="tam">
-                        <input type="password" class="form-control" id="password" placeholder="Contraseña" oninput="update(event)">
+    <div id='contenedor'>
+        <div class="row">
+            <div class="col-sm">
+                <div class="card border-danger space">
+                    <div class="card-header bg-dark">
+                        <h5 class="card-title text-light">Prueba tu Contraseña</h5>
                     </div>
-                    <div class="pos">
-                        <input class="form-check-input" type="checkbox" id="hidePass" checked='true' onclick="ocultarPass(event)">
-                        <label class="form-check-label" for="hidePass">
-                            Ocultar contraseña
-                        </label>
+                    <div class="card-body">
+                            <div class="tam">
+                                <input type="password" class="form-control" id="password" placeholder="Contraseña" oninput="update(event)">
+                            </div>
+                            <div class="pos">
+                                <input class="form-check-input" type="checkbox" id="hidePass" checked='true' onclick="ocultarPass(event)">
+                                <label class="form-check-label" for="hidePass">
+                                    Ocultar contraseña
+                                </label>
+                            </div>
+                            <div class="tamPunt d-flex">
+                                <label for="porcentaje" class="posBar">Puntaje</label>
+                                <div class="progress tamBar">
+                                    <div id='barPuntaje' class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="tamPunt">
+                                <label for="complejidad">Complejidad</label>
+                            </div>
+                            <div class="tamPunt">
+                                <button type="button" class="btn btn-outline-danger btn-lg btn-block">Guardar Medición</button>
+                            </div>
+                            <h5 class="card-title text-center">Requerimientos Mínimos</h5>
+                            <ul class="list-group">
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Longitud en caracteres
+                                <span class="badge badge-danger badge-pill">8+</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Contener letras mayúsculas
+                                <span class="badge badge-danger badge-pill">1+</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Contener letras minúsculas
+                                <span class="badge badge-danger badge-pill">1+</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    Contener números
+                                    <span class="badge badge-danger badge-pill">1+</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    Contener símbolos
+                                    <span class="badge badge-danger badge-pill">1+</span>
+                                </li>
+                            </ul>
                     </div>
-                    <div class="tamPunt d-flex">
-                        <label for="porcentaje" class="posBar">Puntaje</label>
-                        <div class="progress tamBar">
-                            <div id='barPuntaje' class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="tamPunt">
-                        <label for="complejidad">Complejidad</label>
-                    </div>
-                    <div class="tam">
-                        <button type="button" class="btn btn-outline-danger btn-lg btn-block">Guardar Medición</button>
-                    </div>
-                </div >
-                <div class="col-sm">
-                    <h5 class="card-title text-center">Requerimientos Mínimos</h5>
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          Longitud en caracteres
-                          <span class="badge badge-danger badge-pill">8+</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          Contener letras mayúsculas
-                          <span class="badge badge-danger badge-pill">1+</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                          Contener letras minúsculas
-                          <span class="badge badge-danger badge-pill">1+</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Contener números
-                            <span class="badge badge-danger badge-pill">1+</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Contener símbolos
-                            <span class="badge badge-danger badge-pill">1+</span>
-                          </li>
-                      </ul>
                 </div>
             </div>
-          </div>
-
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Estado</th>
-                <th scope="col">Requerimiento</th>
-                <th scope="col">Valor</th>
-                <th scope="col">Cantidad</th>
-                <th scope="col">Puntaje</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                  <td><i id='status1' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Número de caracteres</td>
-                  <td>+(n*4)</td>
-                  <td id='cant1'>0</td>
-                  <td id='punt1'>0</td>
-              </tr>
-              <tr>
-                  <td><i id='status2' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Letras Mayúsculas</td>
-                  <td>+((long-n)*2)</td>
-                  <td id='cant2'>0</td>
-                  <td id='punt2'>0</td>
-              </tr>
-              <tr>
-                  <td><i id='status3' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Letras Minúsculas</td>
-                  <td>+((long-n)*2)</td>
-                  <td id='cant3'>0</td>
-                  <td id='punt3'>0</td>
-              </tr>
-              <tr>
-                  <td><i id='status4' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Números</td>
-                  <td>+(n*4)</td>
-                  <td id='cant4'>0</td>
-                  <td id='punt4'>0</td>
-              </tr>
-              <tr>
-                  <td><i id='status5' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Simbolos</td>
-                  <td>+(n*6)</td>
-                  <td id='cant5'>0</td>
-                  <td id='punt5'>0</td>
-              </tr>
-              <tr>
-                  <td><i id='status6' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Números o Simbolos en medio</td>
-                  <td>+(n*2)</td>
-                  <td id='cant6'>0</td>
-                  <td id='punt6'>0</td>
-              </tr>
-              <tr>
-                  <td><i id='status7' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
-                  <td>Requerimientos</td>
-                  <td>+(n*2)</td>
-                  <td id='cant7'>0</td>
-                  <td id='punt7'>0</td>
-              </tr>
-            </tbody>
-          </table>
+            <div class="col-sm">
+                <table class="table space">
+                    <thead>
+                    <tr>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Requerimiento</th>
+                        <th scope="col">Valor</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Puntaje</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><i id='status1' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Número de caracteres</td>
+                        <td>+(n*4)</td>
+                        <td id='cant1'>0</td>
+                        <td id='punt1'>0</td>
+                    </tr>
+                    <tr>
+                        <td><i id='status2' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Letras Mayúsculas</td>
+                        <td>+((long-n)*2)</td>
+                        <td id='cant2'>0</td>
+                        <td id='punt2'>0</td>
+                    </tr>
+                    <tr>
+                        <td><i id='status3' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Letras Minúsculas</td>
+                        <td>+((long-n)*2)</td>
+                        <td id='cant3'>0</td>
+                        <td id='punt3'>0</td>
+                    </tr>
+                    <tr>
+                        <td><i id='status4' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Números</td>
+                        <td>+(n*4)</td>
+                        <td id='cant4'>0</td>
+                        <td id='punt4'>0</td>
+                    </tr>
+                    <tr>
+                        <td><i id='status5' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Simbolos</td>
+                        <td>+(n*6)</td>
+                        <td id='cant5'>0</td>
+                        <td id='punt5'>0</td>
+                    </tr>
+                    <tr>
+                        <td><i id='status6' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Números o Simbolos en medio</td>
+                        <td>+(n*2)</td>
+                        <td id='cant6'>0</td>
+                        <td id='punt6'>0</td>
+                    </tr>
+                    <tr>
+                        <td><i id='status7' class="fa fa-times-circle fa-2x mal" aria-hidden="true"></i></td>
+                        <td>Requerimientos</td>
+                        <td>+(n*2)</td>
+                        <td id='cant7'>0</td>
+                        <td id='punt7'>0</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 
