Agrego logica guardar ultimas 5 contraseñas en localStorage

--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="card-body">
                             <div class="tam">
-                                <input type="password" class="form-control" id="password" placeholder="Contraseña" oninput="update(event)">
+                                <input type="password" class="form-control" id="password" placeholder="Contraseña" oninput="update(event)"/>
                             </div>
                             <div class="pos">
                                 <input class="form-check-input" type="checkbox" id="hidePass" checked='true' onclick="ocultarPass(event)">
@@ -43,7 +43,7 @@
                                 <label for="complejidad">Complejidad</label>
                             </div>
                             <div class="tamPunt">
-                                <button type="button" class="btn btn-outline-danger btn-lg btn-block">Guardar Medición</button>
+                                <button type="button" class="btn btn-outline-danger btn-lg btn-block" onclick="savePass()">Guardar Medición</button>
                             </div>
                             <h5 class="card-title text-center">Requerimientos Mínimos</h5>
                             <ul class="list-group">
