New test storage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>Proyecto 1</title>
   </head>
-  <body onload="cargarTabla()" onpopstate="navegando()">
+  <body onload="cargarTabla()" onstorage="cargarTabla()">
     <nav class="navbar navbar-dark bg-dark">
       <span class="navbar-brand mb-0 h1 title">PassMeter</span>
     </nav>
