--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <span class="navbar-brand mb-0 h1 title">PassMeter</span>
     </nav>
     
-    <div class="container" id='contenedor'>
+    <div class="container">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Bienvenido!</h1>
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <table class="table space">
+      <table class="table table-sm space">
         <thead>
         <tr>
             <th scope="col">#</th>
