--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="col-sm">
-                <table class="table space">
+                <table class="table table-sm space">
                     <thead>
                     <tr>
                         <th scope="col">Estado</th>
