Agrego nueva tabla de deducciones + refact updateCant separando actualizacion de vista

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     
     <div class="container">
       <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="container contJumb">
           <h1 class="display-4">Bienvenido!</h1>
           <p class="lead">Esta es una aplicación para medir que tan segura es una contraseña</p>
           <hr class="my-4">
           <p>La aplicación medirá de acuerdo a ciertos requerimientos que tan compleja es la contraseña y asignará un puntaje de acuerdo a si son buenas o malas prácticas, señalando el puntaje general y la complejidad de la misma. Esto se verá de manera dinámica a medida que el usuario cambie su contraseña como va afectando a su complejidad y puntaje.</p>
-          <a class="btn btn-primary btn-lg" href="./pages/medidor.html" role="button">Nueva Medición</a>
+          <a class="btn btn-danger btn-lg" href="./pages/medidor.html" role="button">Nueva Medición</a>
         </div>
       </div>
 
-      <table class="table table-sm space">
+      <table class="table table-sm lastsTable">
+        <caption class="capTop">Ultimas 5 contraseñas medidas</caption>      
         <thead>
         <tr>
             <th scope="col">#</th>
