--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -72,7 +72,8 @@
                 </div>
             </div>
             <div class="col-sm">
-                <table class="table table-sm space">
+                <table class="table table-sm table-bordered">
+                    <caption class="capTop">Adicciones</caption>
                     <thead>
                     <tr>
                         <th scope="col">Estado</th>
@@ -132,6 +133,70 @@
                         <td id='cant7'>0</td>
                         <td id='punt7'>0</td>
                     </tr>
+                    </tbody>
+                </table>
+
+                <table class="table table-sm table-bordered minusTop">
+                    <caption class="capTop">Deducciones</caption>
+                    <thead class="text-center">
+                        <tr>
+                            <th scope="col">Estado</th>
+                            <th scope="col">Requerimiento</th>
+                            <th scope="col">Valor</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Puntaje</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-center">
+                        <tr>
+                            <td><i id='status8' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Solo números</td>
+                            <td>-n</td>
+                            <td id='cant8'>0</td>
+                            <td id='punt8'>0</td>
+                        </tr>
+                        <tr>
+                            <td><i id='status9' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Solo letras</td>
+                            <td>-n</td>
+                            <td id='cant9'>0</td>
+                            <td id='punt9'>0</td>
+                        </tr>
+                        <tr>
+                            <td><i id='status10' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Letras Mayúsculas consecutivas</td>
+                            <td>-(n*2)</td>
+                            <td id='cant10'>0</td>
+                            <td id='punt10'>0</td>
+                        </tr>
+                        <tr>
+                            <td><i id='status11' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Letras Minusculas consecutivas</td>
+                            <td>-(n*2)</td>
+                            <td id='cant11'>0</td>
+                            <td id='punt11'>0</td>
+                        </tr>
+                        <tr>
+                            <td><i id='status12' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Números consecutivos</td>
+                            <td>-(n*2)</td>
+                            <td id='cant12'>0</td>
+                            <td id='punt12'>0</td>
+                        </tr>
+                        <tr>
+                            <td><i id='status13' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Letras Secuenciales</td>
+                            <td>-(n*3)</td>
+                            <td id='cant13'>0</td>
+                            <td id='punt13'>0</td>
+                        </tr>
+                        <tr>
+                            <td><i id='status14' class="fa fa-minus-circle fa-2x neutral" aria-hidden="true"></i></td>
+                            <td>Números Secuenciales</td>
+                            <td>-(n*3)</td>
+                            <td id='cant14'>0</td>
+                            <td id='punt14'>0</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
