Manejo de complejidad

--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -39,8 +39,9 @@
                                     <div id='barPuntaje' class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
-                            <div class="tamPunt">
-                                <label for="complejidad">Complejidad</label>
+                            <div class="tamPunt d-flex">
+                                <label for="complejidad">Complejidad:</label>
+                                <h4><span class="badge badge-secondary posComplejidad" id='complejidad'>Mala</span></h4>
                             </div>
                             <div class="tamPunt center-button">
                                 <button type="button" class="btn btn-outline-danger btn-lg btn-block" onclick="savePass()">Guardar Medición</button>
