Cambio forma de analizar + agrego analisis de deducciones

--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -6,6 +6,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/app.css">
+    <link rel="stylesheet" href="../css/medidor.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -41,7 +42,7 @@
                             </div>
                             <div class="tamPunt d-flex">
                                 <label for="complejidad">Complejidad:</label>
-                                <h4><span class="badge badge-secondary posComplejidad" id='complejidad'>Mala</span></h4>
+                                <h4><span class="badge badge-danger posComplejidad colorText" id='complejidad'>Mala</span></h4>
                             </div>
                             <div class="tamPunt center-button">
                                 <button type="button" class="btn btn-outline-danger btn-lg btn-block" onclick="savePass()">Guardar Medición</button>
